--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
 <META NAME="ROBOTS" CONTENT="INDEX, FOLLOW">
-<title>Andrew Smith | ALL4SHARE.NET</title>
+<title>Dicki's Resume</title>
 <link rel="shortcut icon" href="favicon.ico">
 
 <!-- Google Font-->
@@ -37,13 +37,13 @@
       <!-- Logo image--> 
       <img src="images/logo.png" width="140" height="140" alt=""/> 
       <!-- Logo name--> 
-      <span>Andrew Smith</span></div>
+      <span>Dickri Prima Yudha</span></div>
     <!-- Mobile Navigation--> 
     <a href="#menu1" class="menu-link"></a> 
     <!-- Left Navigation-->
     <nav id="menu1" role="navigation"> <a href="#chapterintroduction"><span id="link_introduction" class="active">Home</span></a> <a href="#chapterabout"><span id="link_about">About</span></a> <a href="#chapterskills"><span id="link_skills">Skills</span></a> <a href="#chapterexperience"><span id="link_experience">Experience</span></a> <a href="#chaptereducation"><span id="link_education">Education</span></a> <a href="#chapterportfolio"><span id="link_portfolio">Portfolio</span></a><a href="#chaptercontact"><span id="link_contact">Contact</span></a><a href="blog.html"><span id="link_blog">Blog</span></a></nav>
     <div class="social"> <a href="https://www.facebook.com" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a> <a href="https://twitter.com" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a> <a href="https://plus.google.com" target="_blank" class="google-plus"><i class="fa fa-google-plus"></i></a> </div>
-    <div class="copyright"> © Andrew Smith.<br>
+    <div class="copyright"> © Dickri Prima Yudha.<br>
       All Rights Reserved. </div>
   </aside>
   <!-- Go to top link for mobile device --> 
@@ -55,8 +55,8 @@
       <article class="content introduction noscroll" id="chapterintroduction">
         <div class="inner">
           <h2><span>HEllo, I'm</span><br>
-            Andrew Smith</h2>
-          <span class="title">UX Designer / Frontend Developer</span> </div>
+            Dickri Prima Yudha</h2>
+          <span class="title">Web Developer</span> </div>
         <div id="owl-demo" class="owl-carousel">
            <div class="item"><img src="http://placehold.it/804x990" alt="" /></div>
           <div class="item"><img src="http://placehold.it/804x990" alt="" /></div>
@@ -71,12 +71,12 @@
           <div class="title-divider"></div>
           <div class="about-con">
             <ul>
-              <li>Name: Andrew Smith</li>
-              <li>Email: <a href="mailto:andrew@gmail.com">andrew@gmail.com</a></li>
-              <li>Phone: (123) - 456-7890</li>
-              <li>Date of birth: 23 February 1986</li>
-              <li>Address: PO Box 16122 Collins Street West, Victoria, USA.</li>
-              <li>Nationality: United States</li>
+              <li>Name: Dickri Prima Yudha</li>
+              <li>Email: <a href="mailto:dickiprima@gmail.com">dickiprima@gmail.com</a></li>
+              <li>Phone: 081394655803</li>
+              <li>Date of birth: 01 February 1995</li>
+              <li>Address: Bojongsoang Asri 2 No.13, Bandung, West Java.</li>
+              <li>Nationality: Indonesia</li>
             </ul>
             <h3>Professional Profile</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare sem sed quam tempus aliquet vitae eget dolor. Proin eu ultrices libero. Curabitur vulputate vestibulum elementum. Suspendisse id neque a nibh mollis blandit.<br>
