--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </div>
           <div class="col-sm-10 padding">
             <div class="content">
-              <div class="col-sm-8">
+              <div class="col-sm-8 col-xs-8 col-md-8">
                 <div class="back">
                   <div class="title">
                     <b>Hello there,</b>
@@ -56,7 +56,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm-4">
+              <div class="col-sm-4 col-xs-4 col-md-4">
                 <div class="figure">
                   <img src="img/figure.png" alt="">
                 </div>
