--- a/index.html
+++ b/index.html
@@ -43,16 +43,18 @@
                   <div class="title">
                     <b>Hello there,</b>
                   </div>
-                  <div class="panel">
-                      <div class="panel-title">
-                        <h4></h4>
-                      </div>
-                      <div class="panel-body">
-                        <p>
-                          I'm Dicki Prima Yudha, I graduate student from telecommunication engineering at School of Electrical Engineering, Telkom University
-                          ,
-                        </p>
-                      </div>
+                  <div class="panel-box">
+                    <div class="panel">
+                        <div class="panel-title">
+                          <h4></h4>
+                        </div>
+                        <div class="panel-body">
+                          <p>
+                            I'm Dicki Prima Yudha, I graduate student from telecommunication engineering, Telkom University
+                            ,
+                          </p>
+                        </div>
+                    </div>
                   </div>
                 </div>
               </div>
