--- a/wedding2/index.html
+++ b/wedding2/index.html
@@ -324,7 +324,7 @@ var fwAjaxUrl = "\/red\/wp-admin\/admin-ajax.php";
 		<!-- row end -->
 
         <div class="col-md-4 col-md-pull-4 col-sm-12 idy_text_center idy_about_txt">
-            <p>Invite you to join them as they celebrate&nbsp; their marriage at<br /><strong> Building,<br />Klaten, Central Java</strong></p>
+            <p>Invite you to join them as they celebrate&nbsp; their marriage at<br /><strong> Dk gang malang, Sembaturagung, Jakenan<br />Pati, Central Java</strong></p>
                         <a href="#rsvp" class="idy_go btn">
                 Join Us            </a>
                     </div>
